slack user result email send fixed height and overflow-y:auto

--- a/assets/css/slack_feedback.css
+++ b/assets/css/slack_feedback.css
@@ -90,6 +90,9 @@ h1 {
   -ms-flex-align: center;
   align-items: center;
   margin-top: 30px;
+  height: 200px;
+  max-height: 200px;
+  overflow-y: auto;
 }
 .select-options1 div, .select-options1 table {
   width: 100%;
@@ -179,6 +182,7 @@ div.radio1 {
   -ms-flex-align: center;
   align-items: center;
   border-bottom: 1px solid #e4e4e4;
+  height: 39px;
 }
 div.radio1 ul li:first-child {
   width: 118px;
